# tinycdb-rs

./: .travis.yml  Cargo.toml  Makefile  README.md  build.rs  index.html  search-index.js  settings.html  source-files.js
benches/: bench.rs
examples/: encode.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: base.rs  ffi.rs  lib.rs
src/libc/: fixed_width_ints.rs.html  lib.rs.html  macros.rs.html
src/libc/unix/: align.rs.html  mod.rs.html
src/libc/unix/linux_like/: mod.rs.html
src/libc/unix/linux_like/linux/: align.rs.html  mod.rs.html
src/libc/unix/linux_like/linux/gnu/: align.rs.html  mod.rs.html
src/libc/unix/linux_like/linux/gnu/b64/: mod.rs.html
src/libc/unix/linux_like/linux/gnu/b64/x86_64/: align.rs.html  mod.rs.html  not_x32.rs.html
src/tinycdb/: lib.rs.html
src/tinycdb_sys/: lib.rs.html
tinycdb/: all.html  enum.CdbErrorKind.html  enum.CdbPutMode.html  index.html  sidebar-items.js  struct.Cdb.html  struct.CdbCreator.html  struct.CdbError.html  struct.CdbIterator.html  type.CdbResult.html
tinycdb-sys/: Cargo.toml  build.rs
tinycdb-sys/src/: lib.rs
tinycdb_sys/: all.html  enum.CdbFindMode.html  enum.CdbPutMode.html  fn.cdb_find.html  fn.cdb_findinit.html  fn.cdb_findnext.html  fn.cdb_free.html  fn.cdb_get.html  fn.cdb_init.html  fn.cdb_make_add.html  fn.cdb_make_exists.html  fn.cdb_make_find.html  fn.cdb_make_finish.html  fn.cdb_make_put.html  fn.cdb_make_start.html  fn.cdb_read.html  fn.cdb_seqinit.html  fn.cdb_seqnext.html  index.html  sidebar-items.js  struct.cdb.html  struct.cdb_find.html  struct.cdb_make.html
util/: Makefile  encode.rs
