[package]

name = "tinycdb-sys"
version = "0.0.2"
authors = ["Andrew Dunham <andrew@du.nham.ca>"]

description = "FFI bindings to the TinyCDB C library (http://www.corpit.ru/mjt/tinycdb.html)"
repository = "https://github.com/andrew-d/tinycdb-rs"
license = "MIT"

build = "build.rs"

[dependencies]
libc = "*"
